--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width; user-scalable=0;" />
+<meta name="viewport" content="width=device-width, user-scalable=0" />
 <link rel="stylesheet" type="text/css" href="svg.css"/>
 <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 <link rel="stylesheet" type="text/css" href="mobile.css" media="handheld, screen and (max-width: 600px)"/>
@@ -16,4 +16,5 @@
 </body>
 <script src="./d3.v3/d3.v3.min.js" charset="utf-8"></script>
 <script src="./rect.js"></script>
+<script src="./utils.js"></script>
 <script src="./hex.js"></script>
